fixed style big on mobile safari

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,7 @@
 @use "../theme" as theme;
 
 main {
+  margin-top:24px;
   scroll-padding: 0 24px 64px;
   padding: 0 24px 64px;
 
